--- a/package.json
+++ b/package.json
@@ -2,22 +2,29 @@
   "name": "ElectronStarterKit",
   "version": "1.0.0",
   "description": "Starter Kit",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "repository": "https://github.com/Himenon/ElectronStarterKit",
   "author": "Himenon",
   "license": "MIT",
   "scripts": {
+    "start": "npm run build:renderer:watch",
+    "app": "electron .",
+    "build:renderer:watch": "webpack --config ./webpack.config.js --watch --mode=development",
     "prepare": "npx tsc webpack.config.ts --lib es2018,dom --module commonjs",
-    "format": "prettier --config .prettierrc --write src/*.{ts,tsx}"
+    "format": "prettier --config .prettierrc --write src/*.{ts,tsx}",
+    "test:watch": "npm run test:jest -- --watch",
+    "test:jest": "jest -c ./jest.config.json"
   },
   "dependencies": {
     "electron": "^2.0.8",
     "mobx": "^5.1.0",
     "mobx-react": "^5.2.5",
-    "react": "^16.4.2"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.1",
     "@types/node": "^10.9.2",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
@@ -30,6 +37,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
+    "jest": "^23.5.0",
     "lint-staged": "^7.2.2",
     "mime": "^2.3.1",
     "mini-css-extract-plugin": "^0.4.2",
@@ -43,6 +51,7 @@
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
+    "ts-jest": "^23.1.4",
     "ts-loader": "^4.5.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
